# dsp_toolkit

./: .gitignore  LICENSE  Makefile  README.md  TODO  setup.cfg
docs/: demo.ipynb
dsp_toolbox/filtering/: filters.py  trapezoidal_filters.py  xia_filters.py
dsp_toolbox/sample_data/: sample_energy_spectra.py  sample_traces.py
dsp_toolbox/signal_pileup/: pileup.py
dsp_toolbox/signal_pileup/root_macros/: README.md  pileUpModels.C
dsp_toolbox/timing/: constant_fraction_discriminators.py  fitters.py
dsp_toolkit/filtering/: filters.py  xia_filters.py
dsp_toolkit/sample_data/: sample_traces.py
dsp_toolkit/signal_pileup/: pileup.py
dsp_toolkit/signal_pileup/root_macros/: PileUpDrivGauss.C  pileUpGenerator.C
dsp_toolkit/timing/: constant_fraction_discriminators.py  fitters.py
filtering/: trapezoidal_filters.py
inc/: FilterParameters.hpp  TraceFilter.cpp  TraceFilter.hpp  TrapezoidalFilter.hpp
sample_data/: sample_traces.py
src/: TraceFilter.cpp  TrapezoidalFilter.cpp  energy.ipf  plot.gp  test.cpp
