[metadata]
name = dsp_toolkit
version = 2.8.1
author = S. V. Paulauskas
author_email = stanpaulauskas@gmail.com
description = Functions useful for analyzing digitized signals.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License Version 2.0
license_file = LICENSE
url = https://github.com/spaulaus/dsp_toolkit
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering :: Physics
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy
    scipy
